# streamRAG-audio

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml  requirements-audio.txt
audio/: asr_partials.py  build_traces.py  config.py  stabilizer.py  synth.py  synth_qwen.py
comparison/: README.md  __init__.py  crag_task1_eval.py  identity.py  local_eval.py  services.py
comparison/benchmark/: __init__.py  run_benchmark.py  score.py  typed_trace.py
data/audio_crag/: asr_traces.json  checksums.sha256  manifest.jsonl
data/audio_crag_qwen/: asr.jsonl  checksums.sha256  manifest.jsonl  queries.jsonl
data/crag_eval/: README.md  REVIEW_SHEET.md  checksums.sha256  dataset_summary.json  dev_queries.jsonl  documents.jsonl.bz2  leakage_audit.json  selection_manifest.json  test_gold.jsonl  test_queries.jsonl
deployment/: README.md  modal_app.py
docs/: AUDIO.md  BENCHMARK_REPORT.md  DATASET.md  LOCAL.md  PIPELINE.md  RUN.md
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Home.tsx  api.ts  main.tsx  routes.ts  runLifecycle.ts  styles.css
harness/: eval_common.py  run_multivoice.py  run_three_arm.py  serve_local.sh  smoke_9b.py
naive/: Dockerfile  README.md  __init__.py  api.py  config.py  evaluation.py  path.py
native/: parity_bench.py
native/snapshot_delta/: Cargo.toml  pyproject.toml
native/snapshot_delta/src/: lib.rs
runs/: audio_quality.json  multivoice.json  prefill_warm.json  smoke_9b_transcript.json  three_arm.json
scoring/: asr_multivoice.py  audio_quality.py  prefill_warm.py
shared/: README.md  __init__.py  config.py  fingerprints.py  metrics.py  models.py  path.py  query.py
shared/agent/: __init__.py  context.py  openai_client.py  service.py  summary_skill.py
shared/api/: __init__.py  events.py  factory.py  runtime.py  schemas.py
shared/data/: __init__.py  crag.py  index_state.py  session_store.py  vector_store.py
shared/rag/: __init__.py  embeddings.py
stream/: Dockerfile  README.md  __init__.py  api.py  config.py  coordinator.py  evaluation.py  path.py  snapshot.py  trigger.py
