[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamrag"
version = "0.1.0"
description = "Fully-local spoken-query RAG: a Model-Triggered Streaming-RAG cascade (Qwen3-TTS -> faster-whisper -> local Qwen3.5-9B) over a reused typed StreamRAG core"
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "openai>=2.20,<3",
  "pydantic-ai-slim[openai]>=1.0,<2",
  "qdrant-client>=1.15,<2",
  "numpy>=2.0,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "tiktoken>=0.9,<1",
  "aiosqlite>=0.20,<1",
  "sse-starlette>=3.0,<4",
  "httpx>=0.28,<1",
]

[dependency-groups]
dev = [
  "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
include = ["shared*", "naive*", "stream*", "comparison*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# The audio front-end, eval, and harness are self-contained measurement scripts
# (dense inline prints/one-liners); relax the purely-stylistic rules there while
# keeping correctness checks (F, B, UP, imports).
[tool.ruff.lint.per-file-ignores]
"audio/*" = ["E501", "E702", "E741"]
"scoring/*" = ["E501", "E702", "E741"]
"harness/*" = ["E501", "E702", "E741"]
