[package]
name = "streamrag_snapshot"
version = "0.1.0"
edition = "2021"
description = "Native per-snapshot delta analysis for the StreamRAG pre-Send path."
license = "MIT"

[lib]
name = "streamrag_snapshot"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
blake2 = "0.10"

[profile.release]
opt-level = 3
lto = true
