[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "streamrag-snapshot"
version = "0.1.0"
description = "Native per-snapshot delta analysis for the StreamRAG pre-Send path."
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "streamrag_snapshot"
